[project]
name = "memebase-game-stats-bot"
version = "0.1.0"
description = "This is a telegram bot that fetches on-chain event statistics for the Memebase contract on the Base network. for past 24 hours for the addresses you provide."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.1",
    "rich>=14.0.0",
    "web3>=7.12.0",
]
